--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <form action="https://formsubmit.co/ffa.stockton@gmail.com" method="POST">
+  <form action="https://formsubmit.co/6204ce2398a5a366f2523b21f4d41fc5" method="POST">
   
   <div style="display: flex; align-items: center; justify-content: center; text-align: center; border: 2px solid #4c4a4a;">
     <a class="image featured" style="width: 160px; height: 160px; overflow: hidden; margin-right: 10px;">
@@ -43,7 +43,7 @@
 
     <div style="display: flex; justify-content: space-between;">
     <label for="todaysDate">Today's Date:</label>
-    <input type="text" id="todaysDate" name="todaysDate" style="width: 75%;" pattern="\d{2}-\d{2}\d{4}" placeholder="" autocomplete="off">
+    <input type="text" id="todaysDate" name="todaysDate" style="width: 75%;" pattern="\d{2}-\d{2}-\d{4}" placeholder="" autocomplete="off">
 </div>
 
 </div>
