--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 
   <form action="https://formsubmit.co/6204ce2398a5a366f2523b21f4d41fc5" method="POST">
-  
+  <!-- Honeypot for scammers-->
+    <input type="text" name="_honey" style="display: none">
+    <!-- Disable Captcha-->
+    <input type="hidden" name="_captcha" value="false">
+
   <div style="display: flex; align-items: center; justify-content: center; text-align: center; border: 2px solid #4c4a4a;">
     <a class="image featured" style="width: 160px; height: 160px; overflow: hidden; margin-right: 10px;">
         <img src="images/ffalogo.png" alt="" style="width: 100%; height: 100%; object-fit: cover; max-width: 100%; max-height: 100%;">
