--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div style="display: flex; justify-content: space-between;">
     <label for="todaysDate">Today's Date:</label>
-    <input type="text" id="todaysDate" name="todaysDate" style="width: 75%;" pattern="\d{2}-\d{2}-\d{4}" placeholder="" autocomplete="off">
+    <input type="text" id="todaysDate" name="Todays Date" style="width: 75%;" pattern="\d{2}-\d{2}-\d{4}" placeholder="" autocomplete="off">
 </div>
 
 </div>
@@ -61,34 +61,34 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 30%;">
             <label for="applicantName">Applicant's Name:</label>
-            <input type="text" id="applicantName" name="applicantName" required autocomplete="given-name">
+            <input type="text" id="applicantName" name="Applicant's Name" required autocomplete="given-name">
         </div>
 
         <div style="width: 30%;">
             <label for="address">Street address:</label>
-            <input type="text" id="address" name="address" required autocomplete="street-address"><br>
+            <input type="text" id="address" name="Address" required autocomplete="street-address"><br>
         </div>
 
         <div style="width: 30%;">
             <label for="address2">City, State and Zip:</label>
-            <input type="text" id="address2" name="address2" required autocomplete="address-level2 address-level1 postal-code"><br>
+            <input type="text" id="Address2" name="address2" required autocomplete="address-level2 address-level1 postal-code"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 30%;">
             <label for="spouseName">Spouse's Name:</label>
-            <input type="text" id="spouseName" name="spouseName" required autocomplete="given-name"><br>
+            <input type="text" id="spouseName" name="Spouse Name" required autocomplete="given-name"><br>
         </div>
 
         <div style="width: 30%;">
             <label for="phone">Phone:</label>
-            <input type="tel" id="phone" name="phone" required autocomplete="tel"><br>
+            <input type="tel" id="phone" name="Phone" required autocomplete="tel"><br>
         </div>
 
         <div style="width: 30%;">
             <label for="applicantEmail">Email:</label>
-            <input type="email" id="applicantEmail" name="applicantEmail" required autocomplete="email"><br>
+            <input type="email" id="applicantEmail" name="Applicant Email" required autocomplete="email"><br>
         </div>
     </div>
     <p>RENEWALS ONLY: If only a member and spouse renewing, please skip next section and go to "Payments".</p><br>
@@ -98,18 +98,18 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="legacyLeaderName">Legacy Leader Name:</label>
-            <input type="text" id="legacyLeaderName" name="legacyLeaderName" autocomplete="given-name"><br>
+            <input type="text" id="legacyLeaderName" name="Legacy Leader Name" autocomplete="given-name"><br>
 
             <label for="region">Region:</label>
-            <input type="text" id="region" name="region" autocomplete="address-level1"><br>
+            <input type="text" id="region" name="Region" autocomplete="address-level1"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="city">City:</label>
-            <input type="text" id="city" name="city" autocomplete="address-level2"><br>
+            <input type="text" id="city" name="City" autocomplete="address-level2"><br>
 
             <label for="country">Country:</label>
-            <input type="text" id="country" name="country" autocomplete="country"><br>
+            <input type="text" id="country" name="Country" autocomplete="country"><br>
         </div>
     </div>
 
@@ -123,30 +123,30 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="grandpaName">Grandfather's Name:</label>
-            <input type="text" id="grandpaName"><br>
+            <input type="text" id="grandpaName" name="Grand Father Name"><br>
 
             <label for="grandmaName">Grandmother's Name:</label>
-            <input type="text" id="grandmaName"><br>
+            <input type="text" id="grandmaName" name="Grand Mother Name"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="grandparentMembershipDate">Membership Date:</label>
-            <input type="text" id="grandparentMembershipDate" style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder="">
+            <input type="text" id="grandparentMembershipDate" name="Grand Member Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder="">
 
             <label for="grandparentAddress">Address:</label>
-            <input type="text" id="grandparentAddress"><br>
+            <input type="text" id="grandparentAddress" name="Grand Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="grandparentPhone">Phone:</label>
-            <input type="tel" id="grandparentPhone"><br>
+            <input type="tel" id="grandparentPhone" name="Grand Phone"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="grandparentEmail">Email:</label>
-            <input type="email" id="grandparentEmail"><br>
+            <input type="email" id="grandparentEmail" name="Grand Email"><br>
         </div>
     </div>
 
@@ -159,30 +159,30 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="fatherName">Father's Name:</label>
-            <input type="text" id="fatherName"><br>
+            <input type="text" id="fatherName" name="Father Name"><br>
 
             <label for="motherName">Mother's Name:</label>
-            <input type="text" id="motherName"><br>
+            <input type="text" id="motherName" name="Mother Name"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="parentMembershipDate">Membership Date:</label>
-            <input type="text" id="parentMembershipDate" style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
+            <input type="text" id="parentMembershipDate" name="Parent Member Date"style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
 
             <label for="parentAddress">Address:</label>
-            <input type="text" id="parentAddress"><br>
+            <input type="text" id="parentAddress" name="Parent Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="parentPhone">Phone:</label>
-            <input type="tel" id="parentPhone"><br>
+            <input type="tel" id="parentPhone" name="Parent Phone"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="parentEmail">Email:</label>
-            <input type="email" id="parentEmail"><br>
+            <input type="email" id="parentEmail" name="Parent Email"><br>
         </div>
     </div>
 
@@ -195,36 +195,36 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="child1Name">Child 1 Name:</label>
-            <input type="text" id="child1Name"><br>
+            <input type="text" id="child1Name" name="Child1 Name"><br>
 
             <label for="child1SpouseName">Spouse Name:</label>
-            <input type="text" id="child1SpouseName"><br>
+            <input type="text" id="child1SpouseName" name="Child1 Spouse"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="child1MembershipDate">Membership Date:</label>
-            <input type="text" id="child1MembershipDate" style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
+            <input type="text" id="child1MembershipDate" name="Child1 Member Date"style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
 
             <label for="child1Address">Address:</label>
-            <input type="text" id="child1Address"><br>
+            <input type="text" id="child1Address" name="Child1 Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="child2Name">Child 2 Name:</label>
-            <input type="text" id="child2Name"><br>
+            <input type="text" id="child2Name" name="Child2 Name"><br>
 
             <label for="child2SpouseName">Spouse Name:</label>
-            <input type="text" id="child2SpouseName"><br>
+            <input type="text" id="child2SpouseName" name="Child2 Spouse"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="child2MembershipDate">Membership Date:</label>
-            <input type="text" id="child2MembershipDate" style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
+            <input type="text" id="child2MembershipDate" name="Child2 Member Date" style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
 
             <label for="child2Address">Address:</label>
-            <input type="text" id="child2Address"><br>
+            <input type="text" id="child2Address" name="Child2 Address"><br>
         </div>
     </div>
 
@@ -237,12 +237,12 @@
 <div style="display: flex; justify-content: space-between; width: 100%;">
     <div style="width: 48%;">
         <label for="quantity">How many renewing/applying:</label>
-        <input type="number" id="quantity" name="quantity" min="1" max="10" value=""><br>
+        <input type="number" id="quantity" name="How Many?" min="1" max="10" value=""><br>
     </div>
 
     <div style="width: 48%;">
         <label for="years">How many years:</label>
-        <input type="number" id="years" name="years" min="0" max="10" value=""><br>
+        <input type="number" id="years" name="Years" min="0" max="10" value=""><br>
     </div>
 </div>
 
@@ -254,7 +254,7 @@
 
     <div style="width: 48%;">
         <p for="paymentMethod">Payment:</p>
-        <select id="paymentMethod" name="paymentMethod" >
+        <select id="paymentMethod" name="Payment Method" >
             <option value=""></option>
             <option value="venmo">Venmo</option>
             <option value="paypal">PayPal</option>
