--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 30%;">
             <label for="applicantName">Applicant's Name:</label>
-            <input type="text" id="applicantName" name="Applicant's Name" required autocomplete="given-name">
+            <input type="text" id="applicantName" name="Applicant's&nbsp; Name" required autocomplete="given-name">
         </div>
 
         <div style="width: 30%;">
@@ -78,7 +78,7 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 30%;">
             <label for="spouseName">Spouse's Name:</label>
-            <input type="text" id="spouseName" name="Spouse Name" required autocomplete="given-name"><br>
+            <input type="text" id="spouseName" name="Spouse&nbsp; Name" required autocomplete="given-name"><br>
         </div>
 
         <div style="width: 30%;">
@@ -88,7 +88,7 @@
 
         <div style="width: 30%;">
             <label for="applicantEmail">Email:</label>
-            <input type="email" id="applicantEmail" name="Applicant Email" required autocomplete="email"><br>
+            <input type="email" id="applicantEmail" name="Applicant&nbsp; Email" required autocomplete="email"><br>
         </div>
     </div>
     <p>RENEWALS ONLY: If only a member and spouse renewing, please skip next section and go to "Payments".</p><br>
@@ -98,7 +98,7 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="legacyLeaderName">Legacy Leader Name:</label>
-            <input type="text" id="legacyLeaderName" name="Legacy Leader Name" autocomplete="given-name"><br>
+            <input type="text" id="legacyLeaderName" name="Legacy&nbsp; Leader&nbsp; Name" autocomplete="given-name"><br>
 
             <label for="region">Region:</label>
             <input type="text" id="region" name="Region" autocomplete="address-level1"><br>
@@ -123,30 +123,30 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="grandpaName">Grandfather's Name:</label>
-            <input type="text" id="grandpaName" name="Grand Father Name"><br>
+            <input type="text" id="grandpaName" name="Grand&nbsp; Father&nbsp; Name"><br>
 
             <label for="grandmaName">Grandmother's Name:</label>
-            <input type="text" id="grandmaName" name="Grand Mother Name"><br>
+            <input type="text" id="grandmaName" name="Grand&nbsp; Mother&nbsp; Name"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="grandparentMembershipDate">Membership Date:</label>
-            <input type="text" id="grandparentMembershipDate" name="Grand Member Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder="">
+            <input type="text" id="grandparentMembershipDate" name="Grand&nbsp; Member&nbsp; Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder="">
 
             <label for="grandparentAddress">Address:</label>
-            <input type="text" id="grandparentAddress" name="Grand Address"><br>
+            <input type="text" id="grandparentAddress" name="Grand&nbsp; Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="grandparentPhone">Phone:</label>
-            <input type="tel" id="grandparentPhone" name="Grand Phone"><br>
+            <input type="tel" id="grandparentPhone" name="Grand&nbsp; Phone"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="grandparentEmail">Email:</label>
-            <input type="email" id="grandparentEmail" name="Grand Email"><br>
+            <input type="email" id="grandparentEmail" name="Grand&nbsp; Email"><br>
         </div>
     </div>
 
@@ -159,30 +159,30 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="fatherName">Father's Name:</label>
-            <input type="text" id="fatherName" name="Father Name"><br>
+            <input type="text" id="fatherName" name="Father&nbsp; Name"><br>
 
             <label for="motherName">Mother's Name:</label>
-            <input type="text" id="motherName" name="Mother Name"><br>
+            <input type="text" id="motherName" name="Mother&nbsp; Name"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="parentMembershipDate">Membership Date:</label>
-            <input type="text" id="parentMembershipDate" name="Parent Member Date"style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
+            <input type="text" id="parentMembershipDate" name="Parent&nbsp; Member&nbsp; Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
 
             <label for="parentAddress">Address:</label>
-            <input type="text" id="parentAddress" name="Parent Address"><br>
+            <input type="text" id="parentAddress" name="Parent&nbsp; Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="parentPhone">Phone:</label>
-            <input type="tel" id="parentPhone" name="Parent Phone"><br>
+            <input type="tel" id="parentPhone" name="Parent&nbsp; Phone"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="parentEmail">Email:</label>
-            <input type="email" id="parentEmail" name="Parent Email"><br>
+            <input type="email" id="parentEmail" name="Parent&nbsp; Email"><br>
         </div>
     </div>
 
@@ -195,36 +195,36 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="child1Name">Child 1 Name:</label>
-            <input type="text" id="child1Name" name="Child1 Name"><br>
+            <input type="text" id="child1Name" name="Child1&nbsp; Name"><br>
 
             <label for="child1SpouseName">Spouse Name:</label>
-            <input type="text" id="child1SpouseName" name="Child1 Spouse"><br>
+            <input type="text" id="child1SpouseName" name="Child1&nbsp; Spouse"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="child1MembershipDate">Membership Date:</label>
-            <input type="text" id="child1MembershipDate" name="Child1 Member Date"style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
+            <input type="text" id="child1MembershipDate" name="Child1&nbsp; Member&nbsp; Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
 
             <label for="child1Address">Address:</label>
-            <input type="text" id="child1Address" name="Child1 Address"><br>
+            <input type="text" id="child1Address" name="Child1&nbsp; Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="child2Name">Child 2 Name:</label>
-            <input type="text" id="child2Name" name="Child2 Name"><br>
+            <input type="text" id="child2Name" name="Child2&nbsp; Name"><br>
 
             <label for="child2SpouseName">Spouse Name:</label>
-            <input type="text" id="child2SpouseName" name="Child2 Spouse"><br>
+            <input type="text" id="child2SpouseName" name="Child2&nbsp; Spouse"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="child2MembershipDate">Membership Date:</label>
-            <input type="text" id="child2MembershipDate" name="Child2 Member Date" style="width: 100%;" pattern="d{2}-\d{2}\d{4}" placeholder=""><br>
+            <input type="text" id="child2MembershipDate" name="Child2&nbsp; Member&nbsp; Date" style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
 
             <label for="child2Address">Address:</label>
-            <input type="text" id="child2Address" name="Child2 Address"><br>
+            <input type="text" id="child2Address" name="Child2&nbsp; Address"><br>
         </div>
     </div>
 
@@ -237,7 +237,7 @@
 <div style="display: flex; justify-content: space-between; width: 100%;">
     <div style="width: 48%;">
         <label for="quantity">How many renewing/applying:</label>
-        <input type="number" id="quantity" name="How Many?" min="1" max="10" value=""><br>
+        <input type="number" id="quantity" name="How&nbsp; Many?" min="1" max="10" value=""><br>
     </div>
 
     <div style="width: 48%;">
@@ -265,7 +265,7 @@
 
     <div style="width: 48%;">
         <label for="comment">Comment:</label>
-        <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br>
+        <textarea id="comment" name="Comment" rows="4" cols="50"></textarea><br>
     </div>
 </div>
 
@@ -273,7 +273,7 @@
 
 <div style="border: 1px solid black; border-radius: 4px; padding: 10px; display: inline-block; margin-bottom: 20px;">
     <p class="section-label">Agreements</p><br>
-    <input type="checkbox" id="agreement" name="agreement" required style="margin-right: 5px;">
+    <input type="checkbox" id="agreement" name="Agreement" required style="margin-right: 5px;">
     <p for="agreement" style="margin-bottom: 0;">
         I confirm all information are correct and payment has been submitted.
     </p>
@@ -282,7 +282,7 @@
 <div style="border: 1px solid #000; padding: 10px;">
 
     <p class="section-label">Attach Receipts-(Optional)</p>
-    <input type="file" id="file" name="file" accept="image/png, image/jpeg, application/pdf"><br>
+    <input type="file" id="file" name="File" accept="image/png, image/jpeg, application/pdf"><br>
 
     <div id="errorMessage" class="error-message"></div>
 
