--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div style="display: flex; justify-content: space-between;">
     <label for="todaysDate">Today's Date:</label>
-    <input type="text" id="todaysDate" name="Todays Date" style="width: 75%;" pattern="\d{2}-\d{2}-\d{4}" placeholder="" autocomplete="off">
+    <input type="text" id="todaysDate" name="Todays&nbsp;Date" style="width: 75%;" pattern="\d{2}-\d{2}-\d{4}" placeholder="" autocomplete="off">
 </div>
 
 </div>
@@ -61,7 +61,7 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 30%;">
             <label for="applicantName">Applicant's Name:</label>
-            <input type="text" id="applicantName" name="Applicant's&nbsp; Name" required autocomplete="given-name">
+            <input type="text" id="applicantName" name="Applicant's&nbsp;Name" required autocomplete="given-name">
         </div>
 
         <div style="width: 30%;">
@@ -78,7 +78,7 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 30%;">
             <label for="spouseName">Spouse's Name:</label>
-            <input type="text" id="spouseName" name="Spouse&nbsp; Name" required autocomplete="given-name"><br>
+            <input type="text" id="spouseName" name="Spouse&nbsp;Name" required autocomplete="given-name"><br>
         </div>
 
         <div style="width: 30%;">
@@ -88,7 +88,7 @@
 
         <div style="width: 30%;">
             <label for="applicantEmail">Email:</label>
-            <input type="email" id="applicantEmail" name="Applicant&nbsp; Email" required autocomplete="email"><br>
+            <input type="email" id="applicantEmail" name="Applicant&nbsp;Email" required autocomplete="email"><br>
         </div>
     </div>
     <p>RENEWALS ONLY: If only a member and spouse renewing, please skip next section and go to "Payments".</p><br>
@@ -98,7 +98,7 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="legacyLeaderName">Legacy Leader Name:</label>
-            <input type="text" id="legacyLeaderName" name="Legacy&nbsp; Leader&nbsp; Name" autocomplete="given-name"><br>
+            <input type="text" id="legacyLeaderName" name="Legacy&nbsp;Leader&nbsp;Name" autocomplete="given-name"><br>
 
             <label for="region">Region:</label>
             <input type="text" id="region" name="Region" autocomplete="address-level1"><br>
@@ -123,30 +123,30 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="grandpaName">Grandfather's Name:</label>
-            <input type="text" id="grandpaName" name="Grand&nbsp; Father&nbsp; Name"><br>
+            <input type="text" id="grandpaName" name="Grand&nbsp;Father&nbsp;Name"><br>
 
             <label for="grandmaName">Grandmother's Name:</label>
-            <input type="text" id="grandmaName" name="Grand&nbsp; Mother&nbsp; Name"><br>
+            <input type="text" id="grandmaName" name="Grand&nbsp;Mother&nbsp;Name"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="grandparentMembershipDate">Membership Date:</label>
-            <input type="text" id="grandparentMembershipDate" name="Grand&nbsp; Member&nbsp; Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder="">
+            <input type="text" id="grandparentMembershipDate" name="Grand&nbsp;Member&nbsp;Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder="">
 
             <label for="grandparentAddress">Address:</label>
-            <input type="text" id="grandparentAddress" name="Grand&nbsp; Address"><br>
+            <input type="text" id="grandparentAddress" name="Grand&nbsp;Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="grandparentPhone">Phone:</label>
-            <input type="tel" id="grandparentPhone" name="Grand&nbsp; Phone"><br>
+            <input type="tel" id="grandparentPhone" name="Grand&nbsp;Phone"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="grandparentEmail">Email:</label>
-            <input type="email" id="grandparentEmail" name="Grand&nbsp; Email"><br>
+            <input type="email" id="grandparentEmail" name="Grand&nbsp;Email"><br>
         </div>
     </div>
 
@@ -159,30 +159,30 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="fatherName">Father's Name:</label>
-            <input type="text" id="fatherName" name="Father&nbsp; Name"><br>
+            <input type="text" id="fatherName" name="Father&nbsp;Name"><br>
 
             <label for="motherName">Mother's Name:</label>
-            <input type="text" id="motherName" name="Mother&nbsp; Name"><br>
+            <input type="text" id="motherName" name="Mother&nbsp;Name"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="parentMembershipDate">Membership Date:</label>
-            <input type="text" id="parentMembershipDate" name="Parent&nbsp; Member&nbsp; Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
+            <input type="text" id="parentMembershipDate" name="Parent&nbsp;Member&nbsp;Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
 
             <label for="parentAddress">Address:</label>
-            <input type="text" id="parentAddress" name="Parent&nbsp; Address"><br>
+            <input type="text" id="parentAddress" name="Parent&nbsp;Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="parentPhone">Phone:</label>
-            <input type="tel" id="parentPhone" name="Parent&nbsp; Phone"><br>
+            <input type="tel" id="parentPhone" name="Parent&nbsp;Phone"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="parentEmail">Email:</label>
-            <input type="email" id="parentEmail" name="Parent&nbsp; Email"><br>
+            <input type="email" id="parentEmail" name="Parent&nbsp;Email"><br>
         </div>
     </div>
 
@@ -195,36 +195,36 @@
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="child1Name">Child 1 Name:</label>
-            <input type="text" id="child1Name" name="Child1&nbsp; Name"><br>
+            <input type="text" id="child1Name" name="Child1&nbsp;Name"><br>
 
             <label for="child1SpouseName">Spouse Name:</label>
-            <input type="text" id="child1SpouseName" name="Child1&nbsp; Spouse"><br>
+            <input type="text" id="child1SpouseName" name="Child1&nbsp;Spouse"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="child1MembershipDate">Membership Date:</label>
-            <input type="text" id="child1MembershipDate" name="Child1&nbsp; Member&nbsp; Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
+            <input type="text" id="child1MembershipDate" name="Child1&nbsp;Member&nbsp;Date"style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
 
             <label for="child1Address">Address:</label>
-            <input type="text" id="child1Address" name="Child1&nbsp; Address"><br>
+            <input type="text" id="child1Address" name="Child1&nbsp;Address"><br>
         </div>
     </div>
 
     <div style="display: flex; justify-content: space-between; width: 100%;">
         <div style="width: 48%;">
             <label for="child2Name">Child 2 Name:</label>
-            <input type="text" id="child2Name" name="Child2&nbsp; Name"><br>
+            <input type="text" id="child2Name" name="Child2&nbsp;Name"><br>
 
             <label for="child2SpouseName">Spouse Name:</label>
-            <input type="text" id="child2SpouseName" name="Child2&nbsp; Spouse"><br>
+            <input type="text" id="child2SpouseName" name="Child2&nbsp;Spouse"><br>
         </div>
 
         <div style="width: 48%;">
             <label for="child2MembershipDate">Membership Date:</label>
-            <input type="text" id="child2MembershipDate" name="Child2&nbsp; Member&nbsp; Date" style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
+            <input type="text" id="child2MembershipDate" name="Child2&nbsp;Member&nbsp;Date" style="width: 100%;" pattern="d{2}-\d{2}-\d{4}" placeholder=""><br>
 
             <label for="child2Address">Address:</label>
-            <input type="text" id="child2Address" name="Child2&nbsp; Address"><br>
+            <input type="text" id="child2Address" name="Child2&nbsp;Address"><br>
         </div>
     </div>
 
@@ -237,7 +237,7 @@
 <div style="display: flex; justify-content: space-between; width: 100%;">
     <div style="width: 48%;">
         <label for="quantity">How many renewing/applying:</label>
-        <input type="number" id="quantity" name="How&nbsp; Many?" min="1" max="10" value=""><br>
+        <input type="number" id="quantity" name="How&nbsp;Many?" min="1" max="10" value=""><br>
     </div>
 
     <div style="width: 48%;">
