--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- Disable Captcha-->
     <input type="hidden" name="_captcha" value="false">
 
+    <input type="hidden" name="_next" value="https://ffamyhub2049.github.io/FFA-AP-Form/Success.html">
+
   <div style="display: flex; align-items: center; justify-content: center; text-align: center; border: 2px solid #4c4a4a;">
     <a class="image featured" style="width: 160px; height: 160px; overflow: hidden; margin-right: 10px;">
         <img src="images/ffalogo.png" alt="" style="width: 100%; height: 100%; object-fit: cover; max-width: 100%; max-height: 100%;">
@@ -237,12 +239,12 @@
 <div style="display: flex; justify-content: space-between; width: 100%;">
     <div style="width: 48%;">
         <label for="quantity">How many renewing/applying:</label>
-        <input type="number" id="quantity" name="How&nbsp;Many?" min="1" max="10" value=""><br>
+        <input type="number" id="quantity" name="How&nbsp;many&nbsp;person?" min="1" max="10" value=""><br>
     </div>
 
     <div style="width: 48%;">
         <label for="years">How many years:</label>
-        <input type="number" id="years" name="Years" min="0" max="10" value=""><br>
+        <input type="number" id="years" name="How&nbsp;many&nbsp;years?" min="0" max="10" value=""><br>
     </div>
 </div>
 
