--- a/Success.html
+++ b/Success.html
@@ -11,7 +11,7 @@
 
    <div style="text-align: center;">
         <h3>FFA LEGACY APPLICATION/RENEWAL FORM</h3>
-        <p> You submitted your information successfully we may contact you once payment is confirmed!</p>
+        <p> You submitted your information successfully we will contact you <br> once payment is confirmed and your application is recorded!</p>
     </div>
     
     
