--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
         <div style="display: flex; align-items: center; justify-content: center; text-align: center; border: 2px solid #4c4a4a;">
           <a class="image featured" style="width: 160px; height: 160px; overflow: hidden; margin-right: 10px;">
-              <img src="/ffalogo.png" alt="" style="width: 100%; height: 100%; object-fit: cover; max-width: 100%; max-height: 100%;">
+              <img src="ffalogo.png" alt="" style="width: 100%; height: 100%; object-fit: cover; max-width: 100%; max-height: 100%;">
           </a>
           <h4 style="max-width: 500px; background-color: transparent;">
               FILIPINO FEDERATION OF AMERICA<br>
