--- a/Success.html
+++ b/Success.html
@@ -12,7 +12,7 @@
     <div style="text-align: center;">
         <h3>FFA LEGACY APPLICATION/RENEWAL FORM</h3>
         <p style="border: 1px solid black; padding: 5px;">
-            You submitted your information successfully. We will contact you once payment is confirmed and your application is recorded!
+            You submitted your information successfully. We will text or email your digital ID once payment is received and confirmed. 
         </p>
     </div>
     
