--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form action="https://formsubmit.co/6204ce2398a5a366f2523b21f4d41fc5" method="POST">
+    <form action="https://formsubmit.co/ffa.stockton@gmail.com" method="POST">
         <!-- Honeypot for scammers-->
           <input type="text" name="_honey" style="display: none">
           <!-- Disable Captcha-->
