--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <!-- Disable Captcha-->
           <input type="hidden" name="_captcha" value="false">
       
-          <input type="hidden" name="_next" value="https://ffamyhub2049.github.io/FFA-AP-Form/Success.html">
+          <input type="hidden" name="_next" value="https://ffamyhub2049.github.io/FFA-AR-Form/Success.html">
       
         <div style="display: flex; align-items: center; justify-content: center; text-align: center; border: 2px solid #4c4a4a;">
           <a class="image featured" style="width: 160px; height: 160px; overflow: hidden; margin-right: 10px;">
